--- a/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP,_Modules,_Packages/Lecture_5-OOP,_Modules,_Packages.ipynb
+++ b/docs/Lectures/Theme_1-Python_Programming/Lecture_5-OOP,_Modules,_Packages/Lecture_5-OOP,_Modules,_Packages.ipynb
@@ -33,11 +33,11 @@
     "    - [5.1.4 Inheritance](#5.1.4-inheritance)\n",
     "    - [5.1.5 Special Methods](#5.1.5-special-methods)\n",
     "    - [5.1.5 When to Use Classes](#5.1.6-when-to-use-classes)\n",
-    "- [5.2 Module Coding Basics](#5.2-module-coding-basics)\n",
+    "- [5.2 Modules Coding Basics](#5.2-modules-coding-basics)\n",
     "    - [5.2.1 The import Statement](#5.2.1-the-import-statement)\n",
     "    - [5.2.2 The from Statement](#5.2.2-the-from-statement)\n",
     "- [5.3 Packages Coding Basics](#5.3-packages-coding-basics)\n",
-    "    - [5.3.1 Difference Between from and import with Packages](#5.3.1-difference-between-from-and-import-with-packages)s\n",
+    "    - [5.3.1 Difference Between from and import with Packages](#5.3.1-difference-between-from-and-import-with-packages)\n",
     "- [Appendix 1: Additional OOP Info](#appendix-1:-additional-oop-info)\n",
     "- [Appendix 2: Modules and Packages Extras](#appendix-2:-modules-and-packages-extras)\n",
     "- [References](#references)"
@@ -56,7 +56,7 @@
    "source": [
     "**Object-oriented programming** (OOP) is a programming approach to structuring programs based on the concept of **objects**, which can contain *data* and *behaviors* in the form of *attributes* and *methods*, respectively. For instance, an object can represent a person with attributes like name, age, and address, and methods such as walking, talking, and running. Or, an object can represent an email message with attributes like a recipient list, subject, and body, and methods like adding attachments and sending.\n",
     "\n",
-    "In OOP, computer programs are designed by defining objects that interact with one another. In Python, the main tool for OOP are Python **classes**. Classes are created using the `class` statement. Then, from classes we can construct object **instances**, which are specific objects created from a particular class. \n",
+    "In OOP, computer programs are designed by defining objects that interact with one another. In Python, the main tool for OOP is Python **classes**. Classes are created using the `class` statement. Then, from classes we can construct object **instances**, which are specific objects created from a particular class. \n",
     "\n",
     "Besides OOP, other programming paradigms on which other languages are based include procedural, functional, and logic programming paradigms."
    ]
@@ -128,7 +128,7 @@
     "\n",
     "The name `sam` is referred to as a **class instance**, or **instance object**, or **class object**, or just an **instance**. We will use these terms interchangeably. \n",
     "\n",
-    "We can create many instances of the same class by calling the class `Dog()`. For example, below we created two Dog instances `sam` and `frank`. Note that although they are both instances of the class Dog, they represent two distinct object, since the equality code results in `False`."
+    "We can create many instances of the same class by calling the class `Dog()`. For example, below we created two Dog instances `sam` and `frank`. Note that although they are both instances of the class Dog, they represent two distinct objects, since the equality code results in `False`."
    ]
   },
   {
@@ -599,7 +599,7 @@
     }
    ],
    "source": [
-    "# The name attribute still exist for 'my_dog'\n",
+    "# The name attribute still exists for 'my_dog'\n",
     "my_dog.name"
    ]
   },
@@ -737,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We cannot modify class attributes via assignment to class instances. In the next example, we first create an instance `frank` and afterward we used an assignment statement `frank.species = 'bird'` to modify the attribute `species` of the class instance `frank` to `bird`. "
+    "We cannot modify class attributes via assignment to class instances. In the next example, we first create an instance `frank` and afterward we use an assignment statement `frank.species = 'bird'` to modify the attribute `species` of the class instance `frank` to `bird`. "
    ]
   },
   {
@@ -820,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can change the class atribute via assignment when using the class name, as shown in the next example."
+    "We can change the class attribute via assignment when using the class name, as shown in the next example."
    ]
   },
   {
@@ -1973,7 +1973,7 @@
    "source": [
     "Python has many built-in methods which can be used with user-defined classes. These methods are also known as **special methods** or **magic methods**. Similar to the `__init__()` method, all special methods have leading and trailing double underscores (also called *dunders*).\n",
     "\n",
-    "For instance, the list of special methods for mathematical operators in Python involve the following.\n",
+    "For instance, special methods for mathematical operators in Python involve the following.\n",
     "```python\n",
     "a + b       a.__add__(b)\n",
     "a - b       a.__sub__(b)\n",
@@ -2166,20 +2166,20 @@
     "\n",
     "For example, we don't need to use classes when we need to:\n",
     "\n",
-    "- Store only data: if there are no any methods inside the body of a class, we can use a dictionary or a named tuple instead.\n",
+    "- Store only data: if there are no methods inside the body of a class, we can use a dictionary or a named tuple instead.\n",
     "- Provide a single method: if a class has only one method, it would be better to use a function instead.\n",
-    "- When a fucntionality is available through built-in types or third-party classes: in that case, we should avoid creating custom classes.\n",
+    "- When a functionality is available through built-in types or third-party classes: in that case, we should avoid creating custom classes.\n",
     "\n",
     "Also, there are other situations where we may not need to use classes, such as: in short and simple programs with simple logic and data structures, in performance-critical programs where classes may slow down the performance, when working in a team with a coding style that doesn't rely on classes, etc. \n",
     "\n",
-    "Therefore, although classes provide many benefits, they don't need to be used in every situations. Often, it is preferred to begin with a simple but working code, and if there is a need to use classes, then go for it."
+    "Therefore, although classes provide many benefits, they don't need to be used in every situation. Often, it is preferred to begin with a simple but working code, and if there is a need to use classes, then go for it."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.2 Module Coding Basics <a id=\"5.2-module-coding-basics\"/>"
+    "## 5.2 Modules Coding Basics <a id=\"5.2-modules-coding-basics\"/>"
    ]
   },
   {
@@ -2209,7 +2209,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.2.1 The `import` Statement <a id=\"5.2.1-the-import-statement\"/>\n",
+    "### 5.2.1 The `import` Statement <a id=\"5.2.1-the-import-statement\"/>\n",
     "\n",
     "Python programs can use the modules file we have created by running an `import` or `from` statement. These statements find, compile, and run a module file’s code. The main difference is that `import` fetches the module as a whole, while `from` fetches specific names out of the module."
    ]
@@ -2357,7 +2357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.2.2 The `from` Statement <a id=\"5.2.2-the-from-statement\"/>\n",
+    "### 5.2.2 The `from` Statement <a id=\"5.2.2-the-from-statement\"/>\n",
     "\n",
     "The `from` statement fetches specific names from the module, and allows to use the names directly (without the need for `module_object.attribute`). This way, we can call the names in the module with less typing."
    ]
@@ -2571,7 +2571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### When Using `import` is Required\n",
+    "#### When Using `import` is Required\n",
     "\n",
     "When the same name of a variable or function is defined in two different modules, and we need to use both of the names at the same time, then we must use the `import` statement. \n",
     "\n",
@@ -2727,7 +2727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Module Namespaces\n",
+    "#### Module Namespaces\n",
     "\n",
     "Modules can be understood as places where collections of names are defined that we want to make visible to the rest of our code. These collections of names live in the module's namespace and represent the attributes of the module object.\n",
     "\n",
@@ -2844,7 +2844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.3 Packages Coding Basics<a id=\"5.3-packages-coding-basics\"/>"
+    "## 5.3 Packages Coding Basics<a id=\"5.3-packages-coding-basics\"/>"
    ]
   },
   {
@@ -3042,7 +3042,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Package `__init__.py` Files"
+    "### Package `__init__.py` Files"
    ]
   },
   {
@@ -3064,7 +3064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5.3.1 Difference Between `from` and `import` with Packages<a id=\"5.3.1-difference-between-from-and-import-with-packages\"/>"
+    "### 5.3.1 Difference Between `from` and `import` with Packages<a id=\"5.3.1-difference-between-from-and-import-with-packages\"/>"
    ]
   },
   {
@@ -3908,7 +3908,7 @@
     }
    ],
    "source": [
-    "# the brand atribute of the instance was not modified by the 'iphone' method\n",
+    "# the brand attribute of the instance was not modified by the 'iphone' method\n",
     "# class method cannot modify specific instances\n",
     "samsung1.brand"
    ]
@@ -3930,7 +3930,7 @@
     }
    ],
    "source": [
-    "# the number atribute of the instance was not modified by the 'iphone' method\n",
+    "# the number attribute of the instance was not modified by the 'iphone' method\n",
     "samsung1.number"
    ]
   },
