--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_6-NumPy/Lecture_6-NumPy.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_6-NumPy/Lecture_6-NumPy.ipynb
@@ -2004,7 +2004,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.50901394, 0.4577819 , 0.47898287])"
+       "array([0.22422424, 0.70761147, 0.37458586])"
       ]
      },
      "execution_count": 72,
@@ -2031,7 +2031,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.24082559, 0.04352625, 0.88068115])"
+       "array([0.827369  , 0.80704915, 0.56825233])"
       ]
      },
      "execution_count": 73,
@@ -2963,7 +2963,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note in the next cell that the dot product of a row_vector and a column_vector is an array, differently from the dot product of a row_vector and a row_vector in the previous cell which is a scalar."
+    "Note in the next cell that the dot product of a `row_vector` and a `column_vector` is an array, differently from the dot product of a `row_vector` and a `row_vector` in the previous cell which is a scalar."
    ]
   },
   {
@@ -3202,7 +3202,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "139 µs ± 6.96 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "124 µs ± 10.5 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -3256,7 +3256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.7 µs ± 66.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n"
+      "1.73 µs ± 324 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
