--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_7-Pandas/Lecture_7-Pandas.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_7-Pandas/Lecture_7-Pandas.ipynb
@@ -8261,7 +8261,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information on merging DataFrames, check the pandas [documentation](http://pandas.pydata.org/pandas-docs/stable/merging.html#database-style-dataframe-joining-merging). Also, we will explain more about merging operations in the lecture on Databases and SQL."
+    "For more information on merging DataFrames, check the pandas [documentation](http://pandas.pydata.org/pandas-docs/stable/merging.html#database-style-dataframe-joining-merging). Also, we will explain more about merging operations in the lecture on Databases and SQL.\n",
+    "\n",
+    "Here is a figure that depicts inner, right, left, and outer join operations. \n",
+    "\n",
+    "<img src=\"images/join_operations.png\" heigth=\"400\">"
    ]
   },
   {
@@ -10329,7 +10333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
