--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_7-Pandas/Lecture_7-Pandas.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_7-Pandas/Lecture_7-Pandas.ipynb
@@ -8265,7 +8265,8 @@
     "\n",
     "Here is a figure that depicts inner, right, left, and outer join operations. \n",
     "\n",
-    "<img src=\"images/join_operations.png\" heigth=\"400\">"
+    "<img src=\"images/join_operations.png\" heigth=\"400\">\n",
+    "<em>Figure: Join Operations.</em>"
    ]
   },
   {
