--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_7-Pandas/Lecture_7-Pandas.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_7-Pandas/Lecture_7-Pandas.ipynb
@@ -10278,7 +10278,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unemployment.to_csv('data/unemployment_missing.csv')"
+    "unemployment.to_csv('data/unemployment.csv')"
    ]
   },
   {
@@ -10296,7 +10296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unemployment.to_csv('data/unemployment_missing.csv', index=False, sep=',')"
+    "unemployment.to_csv('data/unemployment.csv', index=False, sep=',')"
    ]
   },
   {
@@ -10334,7 +10334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
