--- a/docs/Lectures/Tutorials/Tutorial_4-Virtual_Environments/Tutorial_4-Virtual_Environments.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_4-Virtual_Environments/Tutorial_4-Virtual_Environments.ipynb
@@ -80,8 +80,7 @@
     "\n",
     "`python -m venv <virtual_environment_name>` (in Windows)\n",
     "\n",
-    "<img style=\"float: left; height:200px; width:auto\" src=\"images/venv_cmd.png\">\n",
-    "\n"
+    "<img src=\"images/venv_cmd.png\" width=\"350\">"
    ]
   },
   {
@@ -89,7 +88,7 @@
    "id": "9521c82b",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; width:400px\" src=\"images/test_env.png\">"
+    "<img src=\"images/test_env.png\" width=\"400\">"
    ]
   },
   {
@@ -107,8 +106,7 @@
     "\n",
     "`<virtual_environment_name>\\Scripts\\activate` (in Windows)\n",
     "\n",
-    "\n",
-    "<img style=\"float: left; height:200px; width:auto\" src=\"images/activate_env.png\"> "
+    "<img src=\"images/activate_env.png\" width=\"350\">"
    ]
   },
   {
@@ -129,7 +127,7 @@
     "\n",
     "`deactivate`\n",
     "\n",
-    "<img style=\"float: left; height:180px; width:auto\" src=\"images/deactivate_env.png\"> "
+    "<img src=\"images/deactivate_env.png\" width=\"350\">"
    ]
   },
   {
@@ -183,8 +181,7 @@
     "2) Type: `conda create --name myenv` (or you can specify the python version: `conda create -n myenv python=3.9`).\n",
     "3) Type `y` to proceed.\n",
     "\n",
-    "<img style=\"float: left; width:400px\" src=\"images/conda_env.png\"> \n",
-    "\n"
+    "<img src=\"images/conda_env.png\" width=\"450\">"
    ]
   },
   {
@@ -208,7 +205,7 @@
     "\n",
     "`conda deactivate`\n",
     "\n",
-    "<img style=\"float: left; width:300px\" src=\"images/conda_act.png\"> \n"
+    "<img src=\"images/conda_act.png\" width=\"350\">"
    ]
   },
   {
