--- a/docs/Lectures/Tutorials/Tutorial_3-VS_Code/Tutorial_3-VS_Code.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_3-VS_Code/Tutorial_3-VS_Code.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Tutorials/Tutorial_3-VS_Code/Tutorial_3-VS_Code.ipynb)\n",
-    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2024-Applied-Data-Science-with-Python/blob/main/docs/Lectures/Tutorials/Tutorial_3-VS_Code/Tutorial_3-VS_Code.ipynb)  "
+    "[![View notebook on Github](https://img.shields.io/static/v1.svg?logo=github&label=Repo&message=View%20On%20Github&color=lightgrey)](https://github.com/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_1-Python_Programming/Tutorial_3-VS_Code/Tutorial_3-VS_Code.ipynb)\n",
+    "[![Open In Collab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/avakanski/Fall-2023-Python-Programming-for-Data-Science/blob/main/docs/Lectures/Theme_1-Python_Programming/Tutorial_3-VS_Code/Tutorial_3-VS_Code.ipynb)  "
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> An **IDE (Integrated Development Environment)** is a program that integrates tools to facilitate software development, such as a code editor, tools for program execution and debugging, and source control.\n",
+    "> An **IDE (or Integrated Development Environment)** is a program that integrates tools to facilitate software development, such as a code editor, tools for program execution and debugging, and source control.\n",
     "\n",
     "In other words, an IDE is a graphical user interface for program development, that allows end-users to edit, run, browse, and debug programs from a single interface. Using an IDE is especially convenient for beginners to start editing and running codes.\n",
     "\n",
@@ -88,14 +88,14 @@
     "\n",
     "To access IDLE, type in the Windows Command Prompt: `python -m idlelib.idle`. The IDLE window is shown in the figure below. Notice the `>>>` prompt in IDLE, which allows interactive programming, i.e., we can type commands and run them immediately. Also note the syntax highlighting of the entered Python statements, and the menu bar on the top of the window that is similar to the Jupyter Notebook menu and to other MS Office apps (e.g., MS Word).\n",
     "\n",
-    "IDLE is simple to use and does not assume prior experience with system command lines. On the other hand, it is somewhat limited and outdated compared to more recent commercial IDEs."
+    "IDLE is simple to use and recommended for newcomers because it simplifies some details and does not assume prior experience with system command lines. On the other hand, it is somewhat limited compared to more advanced commercial IDEs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:250px; width:auto\" src=\"images/pic17-1.jpg\">"
+    "<img src=\"images/pic17-1.jpg\" width=\"600\">"
    ]
   },
   {
@@ -109,21 +109,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Spyder** is a Python IDE ([https://github.com/spyder-ide/spyder](https://github.com/spyder-ide/spyder)) which is available with the Anaconda installation. It can be accessed from the Start Program menu under Anaconda, as shown below. Spyder offers most of the common IDE features. An interesting feature that is not offered by many similar IDEs is the variable explorer, which displays the user data and variables in a table-based layout inside the IDE."
+    "**Spyder** is a Python IDE ([https://github.com/spyder-ide/spyder](https://github.com/spyder-ide/spyder)) which is available with the Anaconda installation, so you should have it installed on your computer. It can be accessed from the Start Program menu, as shown below. Spyder offers most of the common IDE features. An interesting feature that is not offered by many similar IDEs is the variable explorer, which displays the user data and variables in a table-based layout inside the IDE."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:250px; width:auto\" src=\"images/pic18a.jpg\">"
+    "<img src=\"images/pic18a.jpg\" width=\"200\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:450px; width:auto\" src=\"images/pic18b.jpg\">"
+    "<img src=\"images/pic18b.jpg\" width=\"600\">"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:350px; width:auto\" src=\"images/pic19.jpg\">"
+    "<img src=\"images/pic19.jpg\" width=\"600\">"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:350px; width:auto\" src=\"images/pic17.jpg\">"
+    "<img src=\"images/pic17.jpg\" width=\"600\">"
    ]
   },
   {
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:350px; width:auto\" src=\"images/pic21.jpg\">"
+    "<img src=\"images/pic21.jpg\" width=\"600\">"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Visual Studio Code (VS Code)** is a code editor ([https://code.visualstudio.com/](https://code.visualstudio.com/)), available for Windows, Linux, and Mac OS. Differently from the Visual Studio IDE listed above, Visual Studio Code is small and lightweight, open-source, and extensible. Installing Python support is easy, and VS Code will recognize your Python installation and libraries automatically. VS Code is built using Electron, a framework for creating desktop applications using JavaScript, HTML, and CSS.\n",
+    "**Visual Studio Code (VS Code)** is a code editor ([https://code.visualstudio.com/](https://code.visualstudio.com/)), available for Windows, Linux, and Mac OS. Differently from Visual Studio IDE listed above, Visual Studio Code is small and lightweight, open-source, and extensible. Installing Python support is easy, and VS Code will recognize your Python installation and libraries automatically. VS Code is built using Electron, a framework for creating desktop applications using JavaScript, HTML, and CSS.\n",
     "Visual Studio Code is recognized for its rapid launch speed and efficient resource utilization, guaranteeing a seamless coding experience, even with less powerful hardware."
    ]
   },
@@ -222,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img style=\"float: left; height:350px; width:auto\" src=\"images/pic20.jpg\">"
+    "<img src=\"images/pic20.jpg\" width=\"600\">"
    ]
   },
   {
@@ -233,9 +233,7 @@
     "\n",
     "VS Code can be downloaded from: https://code.visualstudio.com/\n",
     "\n",
-    "<img style=\"float: left; width:650px\" src=\"images/vs1.png\">\n",
-    "\n",
-    "\n"
+    "<img src=\"images/vs1.png\" width=\"600\">"
    ]
   },
   {
@@ -248,7 +246,7 @@
     "\n",
     "Then you will see the window similar to the following figure.\n",
     "\n",
-    "<img style=\"float: left; height:350px; width:auto\" src=\"images/vs3.png\">\n"
+    "<img src=\"images/vs3.png\" width=\"600\">"
    ]
   },
   {
@@ -257,11 +255,11 @@
    "source": [
     "### Python Extension Installation and Configuration\n",
     "\n",
-    "To run Python and Jupyter notebooks in VS Code, we need to install the Python extension and Jupyter extension first. \n",
+    "To run Python in VS Code, we need to install the Python extension and Jupyter extension first. \n",
     "\n",
     "On the left sidebar of the VS Code Window, click the ```Extension```  button and install the Python Extension.\n",
     "\n",
-    "<img style=\"float: left; height:750px; width:auto\" src=\"images/vs2.png\">"
+    "<img src=\"images/vs2.png\" width=\"200\">"
    ]
   },
   {
@@ -270,8 +268,7 @@
    "source": [
     "Similarly, search for the Jupyter notebook extension and install the extension.\n",
     "\n",
-    "\n",
-    "<img style=\"float: left; height:550px; width:auto\" src=\"images/vs4.png\">"
+    "<img src=\"images/vs4.png\" width=\"200\">"
    ]
   },
   {
@@ -285,8 +282,7 @@
     "\n",
     "1) Click ```File``` and ```Open Folder``` in the upper left corner of the window to open the folder that you want to start your project in.\n",
     "\n",
-    "   <img style=\"float: left; height:550px; width:auto\" src=\"images/vs7.png\">\n",
-    "\n"
+    "<img src=\"images/vs7.png\" width=\"200\">"
    ]
   },
   {
@@ -295,10 +291,11 @@
    "source": [
     "2. There are two ways to create a new Jupyter Notebook file inside a folder.\n",
     "  \n",
-    "- Click `File` and then click `New File`, afterward choose the  `Jupyter Notebook` option.\n",
+    "- Click ```File``` and then click ```New File```, afterward choose the  ```Jupyter Notebook ``` option.\n",
     "- Right-click in the blank area under your folder's name on the left side of the window to create a ```New File```, then type your file name with `.ipynb`.   \n",
     "\n",
-    "   <img style=\"float: left; height:450px; width:auto\" src=\"images/vs9.png\">"
+    "  \n",
+    "   <img src=\"images/vs9.png\" width=\"200\">"
    ]
   },
   {
@@ -313,11 +310,11 @@
     "\n",
     "      With that, the installation of Python in VS Code is completed. If any extensions are needed in the future when you run some specific scripts, VS Code will automatically show a pop-up window to help you with the installation.\n",
     "\n",
-    "<img style=\"float: left; height:200px; width:auto\" src=\"images/vs11.png\">\n",
+    "<img src=\"images/vs11.png\" width=\"600\">\n",
     "\n",
-    "<img style=\"float: left; height:350px; width:auto\" src=\"images/vs5.png\">\n",
-    "      \n",
-    "<img style=\"float: left; height:150px; width:auto\" src=\"images/vs6.png\">"
+    "<img src=\"images/vs5.png\" width=\"450\">\n",
+    "\n",
+    "<img src=\"images/vs6.png\" width=\"450\">"
    ]
   },
   {
@@ -328,10 +325,10 @@
     "\n",
     "The built-in IntelliSense feature provides key functions such as:\n",
     "\n",
-    "- Auto code completion/Assist/Hint: It predicts and auto-generates code as you type, reducing the requirement for manual input and reducing the chances of typos and syntax errors.  \n",
+    "- Auto code completion/Assist/Hint: It predicts and auto-generates code as you type, reducing the requirement for manual input and diminishing the chances of typos and syntax errors. It offers recommendations for code elements that align with the current context, simplifying the process of producing accurate code. It also considers the programming language in use and the libraries or modules that you've incorporated. This results in suggestions that are closely aligned with your code's context, facilitating the exploration of accessible choices.\n",
     "- Parameter Information: When you call a function/method, it shows information about the function's parameters, the data types, and descriptions. This makes it simpler to provide the correct arguments when calling functions.\n",
     "\n",
-    "<img style=\"float: left; width:450px\" src=\"images/vs12.png\">"
+    "<img src=\"images/vs12.png\" width=\"450\">"
    ]
   },
   {
@@ -340,7 +337,7 @@
    "source": [
     "Variables/Data Viewer enables to examine and engage with the variables and data within your Jupyter notebook's kernel. It provides a visual interface for investigating the present condition of variables, their values, and data arrangements.\n",
     "\n",
-    "<img style=\"float: left; width:550px\" src=\"images/vs13.png\">\n"
+    "<img src=\"images/vs13.png\" width=\"550\">"
    ]
   },
   {
@@ -349,19 +346,7 @@
    "source": [
     "In the Data Viewer, you can ```sort``` the columns by clicking on the column name, and you can also ```filter``` the data by typing the keywords/syntax.\n",
     "\n",
-    "<img style=\"float: left; width:650px\" src=\"images/vs14.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Additionally, the newly added `View Data` feature makes it more convenient to access each variables instead of \n",
-    "loading all of the variables, which can be time consuming. \n",
-    "\n",
-    "<img style=\"float: left; width:800px\" src=\"images/view_data.png\">\n",
-    "\n",
-    "<img style=\"float: left; width:600px\" src=\"images/view_data1.png\">"
+    "<img src=\"images/vs14.png\" width=\"650\">"
    ]
   },
   {
@@ -374,16 +359,16 @@
     "- Execute Above Cells, which runs all the cells above the current cell.\n",
     "- Execute Cell and Below Cells, which runs the current and all the below cells.\n",
     "\n",
-    "<img style=\"float: left; height:450px; width:auto\" src=\"images/vs15.png\"> "
+    "<img src=\"images/vs15.png\" width=\"350\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To move cells, click and hold the blue bar in front of the cell, then move it to any place you prefer.\n",
+    "To move cells, click and hold the blue bar in front of the cell, then move to any place you prefer.\n",
     "\n",
-    "<img style=\"float: left; height:450px; width:auto\" src=\"images/vs16.png\"> "
+    "<img src=\"images/vs16.png\" width=\"350\">"
    ]
   },
   {
@@ -392,13 +377,13 @@
    "source": [
     "Copy/Save/Zoom-in Plots.\n",
     "\n",
-    "Copy function allows to copy the plot to the clipboard.\n",
+    "Copy function allows you to copy the plot to your clipboard.\n",
     "\n",
-    "Save function allows the save the plot as an image file.\n",
+    "Save function allows you the save the plot as an image file.\n",
     "\n",
-    "Zoom-in allows to zoom in and see the details if the plot is too large and complicated.\n",
+    "Zoom-in allows you to zoom in and see the details if the plot is too large and complicated.\n",
     "\n",
-    "<img style=\"float: left; height:350px\" src=\"images/vs17.png\"> "
+    "<img src=\"images/vs17.png\" width=\"550\">"
    ]
   },
   {
@@ -406,8 +391,8 @@
    "metadata": {},
    "source": [
     "Debug features: click the arrow next to the Run Cell button and click ```Debug Cell```, and you can then debug like you normally do in Python.\n",
-    "   \n",
-    "<img style=\"float: left; height:250px; width:auto\" src=\"images/vs18.png\"> "
+    "\n",
+    "<img src=\"images/vs18.png\" width=\"550\">"
    ]
   },
   {
@@ -434,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
