--- a/docs/Lectures/Tutorials/Tutorial_2-Terminal_and_Command_Line/Tutorial_2-Terminal_and_Command_Line.ipynb
+++ b/docs/Lectures/Tutorials/Tutorial_2-Terminal_and_Command_Line/Tutorial_2-Terminal_and_Command_Line.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "To run Command Prompt as an admin, hold `Ctrl` + `Shift` before pressing Enter, or right-click on the Command Prompt to select `\"Run as administrator\"`.\n",
     "\n",
-    "<img src=\"images/cmd3.png\" width=\"500\">\n"
+    "<img src=\"images/cmd3.png\" width=\"400\">\n"
    ]
   },
   {
@@ -90,12 +90,12 @@
     "\n",
     "- Access through **Jupyter Lab**. After opening Jupyter Lab, in the top menu select the **File** tab, then click **New**, and select **Terminal**.\n",
     "\n",
-    "<img src=\"images/cmd6.png\" width=\"500\">\n",
+    "<img src=\"images/cmd6.png\" width=\"450\">\n",
     "\n",
     "\n",
     "- Or, enter **Anaconda Prompt** in the Start menu's search bar to search for it. The difference between Anaconda Prompt and Command Prompt is that Anaconda Prompt offers some conda-specific features, such as conda environment management, package management, and pre-configured data science packages.\n",
     "\n",
-    "<img src=\"images/cmd7.png\" width=\"500\">"
+    "<img src=\"images/cmd7.png\" width=\"450\">"
    ]
   },
   {
@@ -128,15 +128,15 @@
     "\n",
     "`DIR` is an abbreviation for the word directory, and it lists the contents of the directory (folder) that you are currently in. \n",
     "\n",
-    "<img src=\"images/cmd11.png\" width=\"500\">\n",
+    "<img src=\"images/cmd11.png\" width=\"400\">\n",
     "\n",
     "To change the current directory, use `CD` followed by the name of the folder you want to access. \n",
     "\n",
-    "<img src=\"images/cmd12.png\" width=\"500\">\n",
+    "<img src=\"images/cmd12.png\" width=\"400\">\n",
     "\n",
     "To go back to the parent directory, use `CD ..`\n",
     "\n",
-    "<img src=\"images/cmd13.png\" width=\"500\">"
+    "<img src=\"images/cmd13.png\" width=\"400\">"
    ]
   },
   {
@@ -149,19 +149,19 @@
     "\n",
     "E.g., the command to create a folder named \"test\" is `mkdir test`.\n",
     "\n",
-    "<img src=\"images/cmd14.png\" width=\"500\">\n",
+    "<img src=\"images/cmd14.png\" width=\"450\">\n",
     "\n",
     "Use `rmdir` followed by `[new folder name]` to delete a  folder.\n",
     "\n",
-    "<img src=\"images/cmd15.png\" width=\"500\">\n",
+    "<img src=\"images/cmd15.png\" width=\"450\">\n",
     "\n",
     "Use `echo` followed by `content in the file` > `[new file name]`  to create a file.\n",
     "\n",
-    "<img src=\"images/echo.png\" width=\"500\">\n",
+    "<img src=\"images/echo.png\" width=\"450\">\n",
     "\n",
     "Use `del` followed by `[file name]`  to delete a file.\n",
     "\n",
-    "<img src=\"images/cmd16.png\" width=\"500\">"
+    "<img src=\"images/cmd16.png\" width=\"400\">"
    ]
   },
   {
@@ -174,7 +174,7 @@
     "\n",
     "Similarly, use `move ` followed by `[source directory]` to `[destination directory]` to move a file/folder between directories.\n",
     "\n",
-    "<img src=\"images/copy_cmd.png\" width=\"700\" height =\"440\">"
+    "<img src=\"images/copy_cmd.png\" width=\"550\">"
    ]
   },
   {
@@ -211,13 +211,13 @@
     "\n",
     "To find the file directory, just right-click on the file, then click \"Properties\" and copy the path.\n",
     "\n",
-    "<img src=\"images/cmd18.png\" width=\"400\">\n",
+    "<img src=\"images/cmd18.png\" width=\"350\">\n",
     "\n",
     "E.g., the path of the `test.py` file is `C:\\Users\\L\\Desktop\\TA\\test.py`.\n",
     "\n",
     "To run this file, use the command `python \"C:\\Users\\L\\Desktop\\TA\\test.py\"`.\n",
     "\n",
-    "<img src=\"images/cmd19.png\" width=\"500\">"
+    "<img src=\"images/cmd19.png\" width=\"400\">"
    ]
   },
   {
@@ -228,7 +228,7 @@
     "\n",
     "- To access the terminal, click on the Activities on the upper left of the screen, and type keywords like **\"terminal\"**, **\"command\"**, **\"prompt\"**, or **\"shell\"**.\n",
     "\n",
-    "<img src=\"images/terminal1.png\" width=\"600\">\n",
+    "<img src=\"images/terminal1.png\" width=\"500\">\n",
     "\n",
     "- Press **Ctrl+Alt+T**."
    ]
@@ -240,7 +240,7 @@
     "After opening a terminal window,\n",
     "**username@linux-desktop:~$** will be displayed. \n",
     "\n",
-    "<img src=\"images/terminal2.png\" width=\"600\">"
+    "<img src=\"images/terminal2.png\" width=\"500\">"
    ]
   },
   {
@@ -253,15 +253,15 @@
     "\n",
     "The command `help` in Linux is the same command as in Windows, and it displays the available command names.\n",
     "\n",
-    "<img src=\"images/help.png\" width=\"900\" height=\"800\">\n",
+    "<img src=\"images/help.png\" width=\"900\">\n",
     "\n",
     "Similarly, `help` followed by a command-name will show the specific information of that command.\n",
     "\n",
-    "<img src=\"images/help_example.png\" width=\"500\" height=\"200\">\n",
+    "<img src=\"images/help_example.png\" width=\"500\">\n",
     "\n",
     "The command `pwd` returns the current working directory, showing where you are in the file system.\n",
     "\n",
-    "<img src=\"images/pwd.png\" width=\"700\" height=\"400\">\n",
+    "<img src=\"images/pwd.png\" width=\"500\">\n",
     "\n",
     "The `cd` command in Linux  is the same as in Windows, and it is used to navigate between different directories in the file system. \n",
     "\n",
@@ -275,19 +275,19 @@
     "\n",
     "The `rm` command is used to delete a file in the current directory.\n",
     "\n",
-    "<img src=\"images/mkdir.png\" width=\"500\">\n",
+    "<img src=\"images/mkdir.png\" width=\"300\">\n",
     "\n",
     "The `cp` command allows you to copy files or directories.\n",
     "\n",
-    "<img src=\"images/cp.png\" width=\"500\">\n",
+    "<img src=\"images/cp.png\" width=\"300\">\n",
     "\n",
     "The `mv` command is used to move a file or directory from one place to another. \n",
     "\n",
-    "<img src=\"images/mv.png\" width=\"500\">\n",
+    "<img src=\"images/mv.png\" width=\"300\">\n",
     "\n",
     "Pressing the keys `Ctrl+C` is used to interrupt or terminate a running command or process in the terminal. \n",
     "\n",
-    "<img src=\"images/control_c.png\" width=\"600\" height=\"300\">\n",
+    "<img src=\"images/control_c.png\" width=\"500\">\n",
     "\n",
     "The `clear` command is used to clear the terminal screen, removing all the previous output and providing a clean slate for new commands. This command doesn't affect the running processes or the state of the system; it simply clears the visual clutter from the terminal window.\n",
     "\n",
@@ -297,7 +297,7 @@
     "\n",
     "By hitting `tab` twice you'll get suggestions based on the text written so far.\n",
     "\n",
-    "<img src=\"images/tab.png\" width=\"500\">\n",
+    "<img src=\"images/tab.png\" width=\"350\">\n",
     "\n",
     "To run a Python file in the Linux terminal, type `python3` followed by the file name."
    ]
