--- a/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
+++ b/docs/Lectures/Theme_2-Data_Engineering/Lecture_10-Statistical_Data_Analysis/Lecture_10-Statistical_Data_Analysis.ipynb
@@ -1338,7 +1338,7 @@
    "source": [
     "The elements in the covariance matrix are:\n",
     "\n",
-    "$\\text{covariance\\_matrix} = \\begin{bmatrix} \n",
+    "$\\text{covariance_matrix} = \\begin{bmatrix} \n",
     "\\text{cov}(x,x) & \\text{cov}(x,y) \\\\\n",
     "\\text{cov}(y,x) & \\text{cov}(y,y)\n",
     "\\end{bmatrix}$\n",
